--- a/QuanLyThuVien1/QLyGUI/My Project/Resources.resx
+++ b/QuanLyThuVien1/QLyGUI/My Project/Resources.resx
@@ -121,4 +121,10 @@
   <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="34649313_1018848708265751_1905489037171359744_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\34649313_1018848708265751_1905489037171359744_n.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="34649313_1018848708265751_1905489037171359744_n1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\34649313_1018848708265751_1905489037171359744_n.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
