--- a/QuanLyThuVien1/QLyGUI/frmTiepnhanSach.resx
+++ b/QuanLyThuVien1/QLyGUI/frmTiepnhanSach.resx
@@ -120,58 +120,73 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="Delete_button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAMRSURBVDhPjZHrb8tRGMefsrlsutmIiBC3EJGQEHsj4vLKCyJkI7IML7wg5gVBkEhmQkSIWkkV
-        XZXeftrNpd10va2/deu9XeOSbdaLratuM2PCZCzy9YR/wEk+OTnneT7nOec8JBiN5Ha5KJfNUijWSe5w
-        ZH8sHre87mjPvHI5vsWd9kw0HLb632cqI909lEkmSfR4yMgePREE8vLidSKx1B+NBvraRXy1WTFh0uLH
-        PTk+Xb6A1JnjiNachy8cDiW+jy/3cjGBPRL0Onopiguisdj3CdEJWMz4+lCJoVvXMFB7HulTx9B7uBI9
-        W9YjsG4lQo6WcTGZWqTTaIjkSiW1dvi6frtb8FOvxkeFDINXa5A5dwKpk0fRVbUHkc3r4V27DI48gn2O
-        FB6f/90Dk5nIEYntG2hpwu/7cgzLruJDzVn0n65G8kgV4ts2wLu4BM7SPNhKpqBpfgFYQXP5LoRHRisp
-        Eo44x/htI1cuIH2oAt07tyJethqeGQQrJz5nGpknjJ4xF0pgLJyKQJtXpLitafDLmWr0HTmA0edmjPG7
-        h80CsvUq5Ax6ZI0GZHjOmE3olt2EoUCCej7ELq8bobig/zFYvh1d2zfhf4ZaQlCwbK29OE4Rg24ouXEN
-        OstWIauow3BDA3KCEVlmgOln3nP1vsYGvK2ToT6fIGf5ZR1XDra3u+JrlyK4YBYcvNnEPGNMjIHhhuAB
-        c5e5wyj5xxXTJPCJbSJ5c0P7O/bthpcDrUtmw86HNM8vxIt5M9E4dzqE0nzoZudBUzQFqiLCdc4z7NqB
-        6MinKlI/fUaiP9gjlkhh40DzQimLBSzOYHE6i/nQFE+FqlgCGccVM6dBDAQTOouFSKtWU2sitTDkdo9b
-        i4vRwAkmbpNQkgcdo5HyVXnvBiOXFiHgck340unFj1QqIr1eT60tNkr/mlweiEXDlooK6Epn/W3Hfeb2
-        X6kAj8v3wh8MRrOTkys8djtptdp/stPhoGw6RZ2JBMVGPx8I+YM2u1KZs1yq/Wa7q8wF/AHbm89fDnb2
-        9lI/57jdbpa19AcwsCuQniAqFQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAABGdBTUEAALGPC/xhBQAAAxFJREFUOE+N
+        ketvy1EYx5+yuWy62YiIELcQkZAQeyPi8soLImQjsgwvvCDmBUGQSGZCRIhaSRVdld5+2s2l3XS9rb91
+        671d45Jt1outq24zY8JkLPL1hH/AST45Oed5Puc55zwkGI3kdrkol81SKNZJ7nBkfywet7zuaM+8cjm+
+        xZ32TDQctvrfZyoj3T2USSZJ9HjIyB49EQTy8uJ1IrHUH40G+tpFfLVZMWHS4sc9OT5dvoDUmeOI1pyH
+        LxwOJb6PL/dyMYE9EvQ6eimKC6Kx2PcJ0QlYzPj6UImhW9cwUHse6VPH0Hu4Ej1b1iOwbiVCjpZxMZla
+        pNNoiORKJbV2+Lp+u1vwU6/GR4UMg1drkDl3AqmTR9FVtQeRzevhXbsMjjyCfY4UHp//3QOTmcgRie0b
+        aGnC7/tyDMuu4kPNWfSfrkbySBXi2zbAu7gEztI82EqmoGl+AVhBc/kuhEdGKykSjjjH+G0jVy4gfagC
+        3Tu3Il62Gp4ZBCsnPmcamSeMnjEXSmAsnIpAm1ekuK1p8MuZavQdOYDR52aM8buHzQKy9SrkDHpkjQZk
+        eM6YTeiW3YShQIJ6PsQurxuhuKD/MVi+HV3bN+F/hlpCULBsrb04ThGDbii5cQ06y1Yhq6jDcEMDcoIR
+        WWaA6Wfec/W+xga8rZOhPp8gZ/llHVcOtre74muXIrhgFhy82cQ8Y0yMgeGG4AFzl7nDKPnHFdMk8Ilt
+        InlzQ/s79u2GlwOtS2bDzoc0zy/Ei3kz0Th3OoTSfOhm50FTNAWqIsJ1zjPs2oHoyKcqUj99RqI/2COW
+        SGHjQPNCKYsFLM5gcTqL+dAUT4WqWAIZxxUzp0EMBBM6i4VIq1ZTayK1MOR2j1uLi9HACSZuk1CSBx2j
+        kfJVee8GI5cWIeByTfjS6cWPVCoivV5PrS02Sv+aXB6IRcOWigroSmf9bcd95vZfqQCPy/fCHwxGs5OT
+        Kzx2O2m12n+y0+GgbDpFnYkExUY/Hwj5gza7UpmzXKr9ZrurzAX8Adubz18Odvb2Uj/nuN1ulrX0BzCw
+        K5CeICoVAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="Update_button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAALpSURBVDhPpdKNL9RxHAfwT6ayPHQcTrg4YerWLU5DoTysVtZmQ3bLPERPVGK1Sis9t5Jmu/U0
-        KTFreZiYsx1uWveriI5Ky3Aec1KsLmdK8e7n9/Mf9Nm++26fz/f1/ez7QP8dySkpFB4RTu4SCblaOi2k
-        FCSgapILBpcGiYzkbztMQqpj80nOyxzIzk5IfnL5wjo2k5JMO6OiSLREICZLerH6VBAyWm4gb7QcRRP1
-        uPdNhcy2AridCwW7aesKMvcMDAzk8ZGsTIqQhorIjibCm/ZCOVWF8qEGqAdb0Tj0Fiq9FipDM2rmGWzT
-        ZoDEZPJzknpweFfwDjJ3suyQ10bj8qASRZ0VGDBOwmCagHpIg7LuSlxrL8S1lgKUfC3HJo0CZqtX9HFY
-        QDZxgqPuSNQfwH3dYyxEv7Ebh58nYJ9mN44zqcjXXcKxF0eRVJ+AHMN5OOb4gMNWXrbqjdUyHGQUmGeh
-        afYLkhr8sb8pAmdexeP0y3gc0IQgW6uAakCDtOZ4hDUE89g+zHZ0KyPHzbaLXNdnfaWIrvNGbksYi0Nw
-        9nUI4upF7PnVXL24qwgBjMti51CzmWO9MZj6xdXw8zdQ2JWDbMYaV9pl7GyDu++z+OJinBxM4rHHdtsx
-        RedyaEf4807O9LBIiOs6ByjfuSFP54wburXQjiq5unrgNrL0Mh57yl00aYwAJ1pFGDF9xNPeSOR3EEq7
-        xSj5tApVehucYAjt4w0cvvBGij2vicdLSZigUNrj4YwYt9qtcefDOjzoWo+qPkJNP7E3TajovcrBD+NP
-        UPCdkFws5LHMczNJ1jl0PxoTQWVcicoeH9QPpKNWfxY1ffloGevHnzn2+b4XoeKrNYp/WMB1reVnDien
-        JJLLSrnEO4BML3+L8QMyGGaDYJjOhfFXNduvFuN/UjEMRzCzVvCNtJjzdtki5XBsbAzxf9XaW+JjritT
-        2WN6zpdFUnZ4ssMZxr+OKG+0xxopfbQgrw3phzLoH0F5zhDVejv0AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAABGdBTUEAALGPC/xhBQAAAulJREFUOE+l
+        0o0v1HEcB/BPprI8dBxOuDhh6tYtTkOhPKxW1mZDdss8RE9UYrVKKz23kma79TQpMWt5mJizHW5a96uI
+        jkrLcB5zUqwuZ0rx7uf38x/02b77bp/P9/X97PtA/x3JKSkUHhFO7hIJuVo6LaQUJKBqkgsGlwaJjORv
+        O0xCqmPzSc7LHMjOTkh+cvnCOjaTkkw7o6JItEQgJkt6sfpUEDJabiBvtBxFE/W4902FzLYCuJ0LBbtp
+        6woy9wwMDOTxkaxMipCGisiOJsKb9kI5VYXyoQaoB1vROPQWKr0WKkMzauYZbNNmgMRk8nOSenB4V/AO
+        Mney7JDXRuPyoBJFnRUYME7CYJqAekiDsu5KXGsvxLWWApR8LccmjQJmq1f0cVhANnGCo+5I1B/Afd1j
+        LES/sRuHnydgn2Y3jjOpyNddwrEXR5FUn4Acw3k45viAw1ZetuqN1TIcZBSYZ6Fp9guSGvyxvykCZ17F
+        4/TLeBzQhCBbq4BqQIO05niENQTz2D7MdnQrI8fNtotc12d9pYiu80ZuSxiLQ3D2dQji6kXs+dVcvbir
+        CAGMy2LnULOZY70xmPrF1fDzN1DYlYNsxhpX2mXsbIO777P44mKcHEziscd22zFF53JoR/jzTs70sEiI
+        6zoHKN+5IU/njBu6tdCOKrm6euA2svQyHnvKXTRpjAAnWkUYMX3E095I5HcQSrvFKPm0ClV6G5xgCO3j
+        DRy+8EaKPa+Jx0tJmKBQ2uPhjBi32q1x58M6POhaj6o+Qk0/sTdNqOi9ysEP409Q8J2QXCzkscxzM0nW
+        OXQ/GhNBZVyJyh4f1A+ko1Z/FjV9+WgZ68efOfb5vheh4qs1in9YwHWt5WcOJ6ckkstKucQ7gEwvf4vx
+        AzIYZoNgmM6F8Vc1268W439SMQxHMLNW8I20mPN22SLlcGxsDPF/1dpb4mOuK1PZY3rOl0VSdniywxnG
+        v44ob7THGil9tCCvDemHMugfQXnOENV6O/QAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="Add_button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAMUSURBVDhPdZN7TA1wFMe/KL0uXTREQrm0q7qabDd51u1hS09du4hy3ZncvBc9dSXm4kYeyfvR
-        w4Y0qzwmbqWHa5HNVBKb2BqKLBub7et3Y/5ztt/v/M7O+Zzz++13DqTewAgl4KQCMB6wkw9JiE2Jqcwt
-        ynpXcNnUL3R3XEpslZ330NUYJ+IWiRUESEJE/CgB2/uLgxs8o3QRTZb2Onb8bGHDtwre+XxlUFttS0c9
-        Y3SRzXCFbPhCUTBMMCN9xCbFJF3emm+f2MbTbzMZXuJO98OgTRoozQNVZW483ZVFq399buIAJmKyU6jg
-        4AEEaZVtnayl3hJGWSE4wQQqto9n9J4gLt46mxPTwWnnweTHobTGBesCOuApWEeF7YqLr4009q6l4hoY
-        cNeWTsdAQ1EGrdJt6aMszZ5+deCscvBAXxIviXjBJSBQL68pYQ7VT7yovGfDyaUgRKV1hzSDcGvjSw7T
-        gq4VoOw6qG6ZwWIaOG+ztxlLTcqe/F9axj6bylCjN7NO7OA2UwqrHlUOwn29X5h9KpUZF3ZQkxnJRWUT
-        eJI6Rh4J+AhVgXxg7494Rjd5ctvZtYPA/+R5QwfnmMbRRA1VR+UD8M1x7kntD2F2t5qaPRGsqTCzvqaR
-        vX29fxFx9dbnfHi/lhnZu7msWMl9jKGvwfkjxq7AA/UrDxZ9TWVunZ7awiiqMhU0nEr/By7c4seNV5Yx
-        uXg5jV3JTOj24tgEmGHrj5Wzztpy55somlnKFt5kXqeWB0v3/oFbXnDD1Xjxw1VsYBl396ipODOMw32x
-        GvaiNaWRaA+qcqGxXU8Lq3nr/TluMKzj9RvXmJaTztzyVHaxkca2jQy+7UJpBF7ZyMU/j1ki2nMm3KXR
-        GJh7aRTTm1fx3qcSXrDk80B5BvffSuPVzuM0PNXS6h8dj+9DvTDFbp6AXQQ8MkAk8IJMEobHbpvABQWT
-        uNUcR0OrlruaNQw7I6OrHpSoYHH0wXT7QDFAVnhMOOA8VyQQhkQMiONsJDqoUC2JwgfnOPRbtUMwbjv4
-        I0niJ54ohsJhvoADgd88CM3wY7aHFgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAABGdBTUEAALGPC/xhBQAAAxRJREFUOE91
+        k3tMDXAUx78ovS5dNERCubSruppsN3nW7WFLT127iHLdmdy8Fz11JebiRh7J+9HDhjSrPCZupYdrkc1U
+        EpvYGoosG5vt63dj/nO23+/8zs75nPP77XcOpN7ACCXgpAIwHrCTD0mITYmpzC3Keldw2dQvdHdcSmyV
+        nffQ1Rgn4haJFQRIQkT8KAHb+4uDGzyjdBFNlvY6dvxsYcO3Ct75fGVQW21LRz1jdJHNcIVs+EJRMEww
+        I33EJsUkXd6ab5/YxtNvMxle4k73w6BNGijNA1VlbjzdlUWrf31u4gAmYrJTqODgAQRplW2drKXeEkZZ
+        ITjBBCq2j2f0niAu3jqbE9PBaefB5MehtMYF6wI64ClYR4XtiouvjTT2rqXiGhhw15ZOx0BDUQat0m3p
+        oyzNnn514Kxy8EBfEi+JeMElIFAvrylhDtVPvKi8Z8PJpSBEpXWHNINwa+NLDtOCrhWg7DqobpnBYho4
+        b7O3GUtNyp78X1rGPpvKUKM3s07s4DZTCqseVQ7Cfb1fmH0qlRkXdlCTGclFZRN4kjpGHgn4CFWBfGDv
+        j3hGN3ly29m1g8D/5HlDB+eYxtFEDVVH5QPwzXHuSe0PYXa3mpo9EaypMLO+ppG9fb1/EXH11ud8eL+W
+        Gdm7uaxYyX2Moa/B+SPGrsAD9SsPFn1NZW6dntrCKKoyFTScSv8HLtzix41XljG5eDmNXclM6Pbi2ASY
+        YeuPlbPO2nLnmyiaWcoW3mRep5YHS/f+gVtecMPVePHDVWxgGXf3qKk4M4zDfbEa9qI1pZFoD6pyobFd
+        Twureev9OW4wrOP1G9eYlpPO3PJUdrGRxraNDL7tQmkEXtnIxT+PWSLacybcpdEYmHtpFNObV/HepxJe
+        sOTzQHkG999K49XO4zQ81dLqHx2P70O9MMVunoBdBDwyQCTwgkwShsdum8AFBZO41RxHQ6uWu5o1DDsj
+        o6selKhgcfTBdPtAMUBWeEw44DxXJBCGRAyI42wkOqhQLYnCB+c49Fu1QzBuO/gjSeInniiGwmG+gAOB
+        3zwIzfBjtocWAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="TblSACHBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>170, 17</value>
+  </metadata>
+  <metadata name="TblSACHBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>170, 17</value>
+  </metadata>
+  <metadata name="TVDataBsDataSet2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="TVDataBsDataSet2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="TblSACHTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>348, 17</value>
+  </metadata>
 </root>
