--- a/QuanLyThuVien1/QLyGUI/frmQuyDinhMuonSach.resx
+++ b/QuanLyThuVien1/QLyGUI/frmQuyDinhMuonSach.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Update_button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAABGdBTUEAALGPC/xhBQAAAulJREFUOE+l
         0o0v1HEcB/BPprI8dBxOuDhh6tYtTkOhPKxW1mZDdss8RE9UYrVKKz23kma79TQpMWt5mJizHW5a96uI
