--- a/QuanLyThuVien1/QLyGUI/frmMain.resx
+++ b/QuanLyThuVien1/QLyGUI/frmMain.resx
@@ -320,7 +320,7 @@
         HC9yeYt1M/5/7Y5mwfxtWrwAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnLogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnHeThong.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAADLpJREFUaEPV
         WWlsXFcVfrN5m8T2OONtxnbsxI7HYztjO47t8RI7Xse7nThOyEJBLCX9Q4JUKGpSFEQrVCERCK1KQUWt
